fix: ul list marker no longer invisible on safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -339,11 +339,11 @@ article img {
   }
 
   li {
-    @apply pl-2 my-4 marker:text-list marker:-left-5;
+    @apply pl-2 my-4 marker:text-list;
   }
 
   ul li {
-    @apply marker:content-['-'];
+    list-style-type: "-";
   }
 
   ol li {
